# advent-of-code-2023-rust

./: .gitignore  Cargo.toml  DAY01.md  LICENSE  README.md
.github/workflows/: ci.yml  readme-stars.yml
data/examples/: 01-3.txt
